syntax = "proto3";

package co.bagman.protos;


service LiveChecker {
  rpc Live(LiveRequest) returns (LiveReply) {}

  rpc Ping(PingRequest) returns (stream PingResponse) {}

}

message LiveRequest {}

message LiveReply {
  string message = 1;
}

message PingRequest {
  string message = 1;
}

message PingResponse {
  string message = 1;
}